syntax = "proto3";

package docker;

option java_package = "io.github.manuelkollus.docker.swarm";
option java_multiple_files = true;

message Swarm {
  string id = 1;
  Timestamp createdAt = 2;
  Timestamp updatedAt = 3;
  SwarmSpec spec = 4;
  JoinTokens join_tokens = 5;
  Version version = 6;
  TLSInfo tls_info = 7;
  bool root_rotation_in_progress = 8;
}

message SwarmInit {
  string listen_address = 1;
  string advertise_address = 2;
  bool force_new_cluster = 3;
  SwarmSpec spec = 4;
}
message SwarmSpec {
  string name = 1;
  Dispatcher dispatcher = 2;
  Orchestration orchestration = 3;
  CAConfig ca_config = 4;
  Raft raft = 5;
  TaskDefaults task_defaults = 6;
  EncryptionConfig encryption_config = 7;

  message Dispatcher {
    int64 heartbeat_period = 1;
  }

  message Orchestration {
    int32 task_history_retention_limit = 1;
  }

  message CAConfig {
    int64 node_cert_expiry = 1;
  }

  message Raft {
    int32 log_entries_for_slow_followers = 1;
    int32 heartbeat_tick = 2;
    int32 snapshot_interval = 3;
    int32 election_tick = 4;
  }

  message TaskDefaults {
  }

  message EncryptionConfig {
    bool auto_lock_managers = 1;
  }
}

message JoinTokens {
  string worker = 1;
  string manager = 2;
}

message Version {
  int32 index = 1;
}

message TLSInfo {
  string trust_root = 1;
  string cert_issuer_subject = 2;
  string cert_issuer_public_key = 3;
}

message Timestamp {
}